fixing scrollbar, adding padding bottom on ul, finish on fixing scrollbar

--- a/style.css
+++ b/style.css
@@ -350,7 +350,7 @@ button { font-family: inherit; }
   display: flex;
   flex-direction: column;
   gap: 16px;
-  padding-bottom: 500px; /* Space for fab/nav */
+  padding-bottom: 265px; /* Space for fab/nav */
 }
 
 /* === TASK CARD === */
